--- a/overlay/RvFrameworkOverlay/AndroidManifest.xml
+++ b/overlay/RvFrameworkOverlay/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.arpi.overlay.framework"
+    package="com.arv.overlay.framework"
     android:versionCode="1"
     android:versionName="1.0" >
 
